@@ -11,101 +11,116 @@ import image.Image;
 
 import static org.junit.Assert.assertEquals;
 
+/**
+ * Tests the image class.
+ */
 public class TestImage {
- Image s;
- Image u;
- Image p;
- Image e;
- Image r;
+  Image s;
+  Image u;
+  Image p;
+  Image e;
+  Image r;
 
 
- List<List<Pixel>> lol;
- List<List<Pixel>> peter;
- List<List<Pixel>> griffin;
- List<List<Pixel>> family;
- List<List<Pixel>> guy;
+  List<List<Pixel>> lol;
+  List<List<Pixel>> peter;
+  List<List<Pixel>> griffin;
+  List<List<Pixel>> family;
+  List<List<Pixel>> guy;
 
 
- Pixel one;
- Pixel two;
- Pixel three;
- Pixel four;
- Pixel five;
- Pixel six;
- Pixel seven;
- Pixel eight;
- @Before
- public void setUp() {
+  Pixel one;
+  Pixel two;
+  Pixel three;
+  Pixel four;
+  Pixel five;
+  Pixel six;
+  Pixel seven;
+  Pixel eight;
 
-   one = new Pixel(111,111,111);
-   two = new Pixel(222,222,222);
-   three = new Pixel(0,0,0);
-   four = new Pixel(50,25,12);
-   five =  new Pixel(255,255,255);
-   six = new Pixel(202, 101, 10);
-   seven = new Pixel(18,50,240);
-   eight = new Pixel(1, 2, 3);
-   lol = new ArrayList<>(Arrays.asList((new ArrayList<>(Arrays.asList(one,two))),
-           new ArrayList<>(Arrays.asList(three,four))));
-   peter = new ArrayList<>(List.of((new ArrayList<>(Arrays.asList(one, two)))));
-   griffin = new ArrayList<>(List.of((new ArrayList<>(List.of(one)))));
-   family = new ArrayList<>(Arrays.asList((new ArrayList<>(Arrays.asList(one,two))),
-           new ArrayList<>(Arrays.asList(three,four)),
-           new ArrayList<>(Arrays.asList(five,six)),
-           new ArrayList<>(Arrays.asList(seven,eight))
-           ));
-   guy = new ArrayList<>(Arrays.asList((new ArrayList<>(Arrays.asList(one,two,three,four))),
-           new ArrayList<>(Arrays.asList(five,six,seven,eight))));
-   s = new Image(lol,2,2,255);
-   u = new Image(peter,2,1,255);
-   p = new Image(griffin, 1,1,100);
-   e = new Image(family,2,4,0);
-   r = new Image(guy,4,2,30);
- }
+  @Before
+  public void setUp() {
+
+    one = new Pixel(111, 111, 111);
+    two = new Pixel(222, 222, 222);
+    three = new Pixel(0, 0, 0);
+    four = new Pixel(50, 25, 12);
+    five = new Pixel(255, 255, 255);
+    six = new Pixel(202, 101, 10);
+    seven = new Pixel(18, 50, 240);
+    eight = new Pixel(1, 2, 3);
+    lol = new ArrayList<>(Arrays.asList((new ArrayList<>(Arrays.asList(one, two))),
+            new ArrayList<>(Arrays.asList(three, four))));
+    peter = new ArrayList<>(List.of((new ArrayList<>(Arrays.asList(one, two)))));
+    griffin = new ArrayList<>(List.of((new ArrayList<>(List.of(one)))));
+    family = new ArrayList<>(Arrays.asList((new ArrayList<>(Arrays.asList(one, two))),
+            new ArrayList<>(Arrays.asList(three, four)),
+            new ArrayList<>(Arrays.asList(five, six)),
+            new ArrayList<>(Arrays.asList(seven, eight))
+    ));
+    guy = new ArrayList<>(Arrays.asList((new ArrayList<>(Arrays.asList(one, two, three, four))),
+            new ArrayList<>(Arrays.asList(five, six, seven, eight))));
+    s = new Image(lol, 2, 2, 255);
+    u = new Image(peter, 2, 1, 255);
+    p = new Image(griffin, 1, 1, 100);
+    e = new Image(family, 2, 4, 0);
+    r = new Image(guy, 4, 2, 30);
+  }
+
   @Test(expected = IllegalArgumentException.class)
   public void nullImageVals() {
-   new Image(null,1,1,5);}
+    new Image(null, 1, 1, 5);
+  }
+
   @Test(expected = IllegalArgumentException.class)
   public void smallWidth() {
-    new Image(lol,0,1,5);}
+    new Image(lol, 0, 1, 5);
+  }
+
   @Test(expected = IllegalArgumentException.class)
   public void smallHeight() {
-    new Image(lol,1,0,5);}
+    new Image(lol, 1, 0, 5);
+  }
+
   @Test(expected = IllegalArgumentException.class)
   public void smallMaxValue() {
-    new Image(lol,1,1,-1);}
+    new Image(lol, 1, 1, -1);
+  }
+
   @Test(expected = IllegalArgumentException.class)
   public void allBadParens() {
-    new Image(null,0,0,-1);}
+    new Image(null, 0, 0, -1);
+  }
 
 
- @Test
- public void testFlatten() {
-   assertEquals(s.flatten(), Arrays.asList(one,two,three,four));
-   assertEquals(u.flatten(), Arrays.asList(one,two));
-   assertEquals(p.flatten(), List.of(one));
-   assertEquals(e.flatten(), Arrays.asList(one,two,three,four,five,six,seven,eight));
-   assertEquals(r.flatten(), Arrays.asList(one,two,three,four,five,six,seven,eight));
- }
- @Test
- public void testGetContents() {
-   assertEquals(s.getContents(), Arrays.asList(2,2,255));
-   assertEquals(u.getContents(), Arrays.asList(2,1,255));
-   assertEquals(p.getContents(), Arrays.asList(1,1,100));
-   assertEquals(e.getContents(), Arrays.asList(2,4,0));
-   assertEquals(r.getContents(), Arrays.asList(4,2,30));
+  @Test
+  public void testFlatten() {
+    assertEquals(s.flatten(), Arrays.asList(one, two, three, four));
+    assertEquals(u.flatten(), Arrays.asList(one, two));
+    assertEquals(p.flatten(), List.of(one));
+    assertEquals(e.flatten(), Arrays.asList(one, two, three, four, five, six, seven, eight));
+    assertEquals(r.flatten(), Arrays.asList(one, two, three, four, five, six, seven, eight));
+  }
+
+  @Test
+  public void testGetContents() {
+    assertEquals(s.getContents(), Arrays.asList(2, 2, 255));
+    assertEquals(u.getContents(), Arrays.asList(2, 1, 255));
+    assertEquals(p.getContents(), Arrays.asList(1, 1, 100));
+    assertEquals(e.getContents(), Arrays.asList(2, 4, 0));
+    assertEquals(r.getContents(), Arrays.asList(4, 2, 30));
 
   }
+
   @Test
   public void testGetImageVals() {
-    assertEquals(s.getImageVals(),lol);
+    assertEquals(s.getImageVals(), lol);
     assertEquals(u.getImageVals(), peter);
     assertEquals(p.getImageVals(), griffin);
     assertEquals(e.getImageVals(), family);
     assertEquals(r.getImageVals(), guy);
 
   }
-
 
 
 
